feat: add get all categories functionality
